Scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
 #code-background {
   position: fixed;
   top: 50px; /* Small margin from the top */
-  left: 50px; /* Small margin from the left */
+  left: 10px; /* Small margin from the left */
   width: calc(100% - 100px); /* Width minus margins */
   height: calc(100% - 100px); /* Height minus margins */
   padding: 10px;
@@ -99,9 +99,9 @@ pre.language-javascript {
   width: 70vh; /* Set width */
   min-height: 20vh; /* Set minimum height */
   padding: 20px; /* Padding around content */
-  background-color: #13131648; /* Dracula background color */
+  background-color: #191924ef; /* Dracula background color */
   border-radius: 10px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1); 
   overflow: hidden; /* Ensures content stays within the box */
 }
 
