--- a/src/css/dracula-prism.css
+++ b/src/css/dracula-prism.css
@@ -66,23 +66,6 @@ http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascr
   --yellow-40:     #F1FA8C66;
 }
 
-pre::-webkit-scrollbar 
-{
-  width: 14px;
-}
-
-pre::-webkit-scrollbar-track 
-{
-  background-color: var(--comment);
-  border-radius: 0px;
-}
-
-pre::-webkit-scrollbar-thumb 
-{
-  background-color: var(--purple);
-  border-radius: 0px;
-}
-
 /* Selection */
 
 pre[class*="language-"]::-moz-selection,
